--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DotnetStarter;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;"
   }
 }
