--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;"
-  }
+  },
+  "TokenKey": "super secret key"
 }
