--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;"
   },
-  "TokenKey": "super secret key"
+  "TokenKey": "super secret key",
+  "Cloudinary": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  }
 }
