Email Verification with SendGrid

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -13,5 +13,13 @@
     "CloudName": "",
     "ApiKey": "",
     "ApiSecret": ""
+  },
+  "Facebook": {
+    "AppId": "",
+    "AppSecret": ""
+  },
+  "Sendgrid": {
+    "User": "",
+    "key": ""
   }
 }
