add roles and claims based authorization by using plicies

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;"
   },
-  "TokenKey": "super secret key",
+  "Token": {
+    "Key": "change me to something more secure",
+    "Issuer": "https://localhost:5001"
+  },
   "Cloudinary": {
     "CloudName": "",
     "ApiKey": "",
