--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;Encrypt=false;TrustServerCertificate=true;"
   },
   "Token": {
     "Key": "change me to something more secure",
