--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -8,9 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DotnetStarter;Trusted_Connection=True;Encrypt=false;TrustServerCertificate=true;"
   },
-  "Token": {
-    "Key": "change me to something more secure",
-    "Issuer": "https://localhost:5001"
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "https://localhost:5001",
+    "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
+    "TokenValidityInMinutes": 5,
+    "RefreshTokenValidityInDays": 7
   },
   "Cloudinary": {
     "CloudName": "",
